--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,6 @@
-* {
-    background-color: blue;
+body {
+    background-image: url("./clouds.jpg"); 
+    background-repeat: no-repeat; 
+    background-size: cover; 
+    background-position: center;
 }
