--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,8 +1,8 @@
 :root {
     --blue:#0005a7; 
     --orange:#ffa836; 
-    --lightorange:#ffd3A2; 
     --darkorange:#dd6200; 
+    --light:#fffaf0; 
 }
 
 body {
@@ -17,5 +17,19 @@ h1 {
     text-align: center;
     color: var(--blue); 
     padding:20px; 
-    background: linear-gradient(to right, var(--darkorange), var(--lightorange)); 
+    background: linear-gradient(to right, var(--darkorange), var(--orange)); 
+}
+
+.forecast-grid {
+    background: linear-gradient(var(--orange), var(--darkorange)); 
+    margin: 10px; 
+    padding:10px; 
+}
+.forecast-grid>h5 {
+    color:var(--blue); 
+}
+
+.current-weather-container {
+    border:2px solid var(--orange); 
+    padding: 30px; 
 }
