--- a/assets/styles.css
+++ b/assets/styles.css
@@ -33,6 +33,9 @@ input {
     color: var(--blue); 
     margin-top: 15px; 
 }
+li {
+    list-style-type: none;
+}
 
 /* Current Weather Display Box  */
 .current-weather-container {
